# FlappyBird

./: .gitignore  Cargo.toml  LICENSE-MIT.md  README.md  flappy_bird.js  index.html  restart-audio-context.js
.github/workflows/: deploy.yml
src/: assets.rs  game.rs  lib.rs  main.rs  menu.rs  pipe.rs  player.rs
src/app/: app_state.rs  mod.rs  window.rs
src/assets/: audio.rs  fonts.rs  mod.rs  sprites.rs
src/gameplay/: mod.rs  pipes.rs  player.rs
src/ui/: main_menu.rs  mod.rs  retry_menu.rs  score.rs
web/: index.html
