[package]
name = "flappy_bird"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
rand = "0.8.5"
log = { version = "0.4.25", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
