[package]
name = "flappy_bird"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
